// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UploadButton component renders UI as expected 1`] = `
<div
  className="upload-btn"
>
  <div
    className="button"
  >
    <label
      htmlFor="file"
    >
      <FontAwesomeIcon
        border={false}
        className=""
        fixedWidth={false}
        flip={null}
        icon="camera"
        inverse={false}
        listItem={false}
        mask={null}
        pull={null}
        pulse={false}
        rotation={null}
        size="lg"
        spin={false}
        symbol={false}
        title=""
        transform={null}
      />
      <span
        className="upload-btn-text"
      />
    </label>
    <input
      aria-label="select-files"
      id="file"
      multiple={true}
      name="file"
      type="file"
    />
  </div>
</div>
`;

exports[`UploadButton component renders className as expected 1`] = `
<div
  className="upload-btn"
>
  <div
    className="button"
  >
    <label
      htmlFor="file"
    >
      <FontAwesomeIcon
        border={false}
        className="upload"
        fixedWidth={false}
        flip={null}
        icon="camera"
        inverse={false}
        listItem={false}
        mask={null}
        pull={null}
        pulse={false}
        rotation={null}
        size="lg"
        spin={false}
        symbol={false}
        title=""
        transform={null}
      />
      <span
        className="upload-btn-text"
      />
    </label>
    <input
      aria-label="select-files"
      id="file"
      multiple={true}
      name="file"
      type="file"
    />
  </div>
</div>
`;

exports[`UploadButton component renders text as expected 1`] = `
<div
  className="upload-btn"
>
  <div
    className="button"
  >
    <label
      htmlFor="file"
    >
      <FontAwesomeIcon
        border={false}
        className=""
        fixedWidth={false}
        flip={null}
        icon="camera"
        inverse={false}
        listItem={false}
        mask={null}
        pull={null}
        pulse={false}
        rotation={null}
        size="lg"
        spin={false}
        symbol={false}
        title=""
        transform={null}
      />
      <span
        className="upload-btn-text"
      >
        Browse Files
      </span>
    </label>
    <input
      aria-label="select-files"
      id="file"
      multiple={true}
      name="file"
      type="file"
    />
  </div>
</div>
`;
